--- a/Style.css
+++ b/Style.css
@@ -20,6 +20,10 @@ a {
 }
 body {
   width: 100%;
+  overflow-x: hidden;
+}
+.m-nav-bar {
+  display: none;
 }
 .nav-bar {
   width: 100%;
@@ -46,7 +50,7 @@ body {
   height: 100%;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 0 20px;
 }
@@ -170,6 +174,7 @@ body {
   animation: main-scroll 3s infinite;
   position: absolute;
   bottom: 30px;
+  transform: translateX(-50%);
   opacity: 0.8;
   cursor: pointer;
 }
@@ -324,7 +329,6 @@ body {
 }
 .send-wrapper ul li .send-content {
   width: 50%;
-  max-width: calc(50% - 30px);
 }
 .send-content h3 {
   font-size: 20px;
@@ -491,6 +495,9 @@ body {
   width: 100%;
   height: 950px;
   position: relative;
+}
+.mobile-invest-info {
+  display: none;
 }
 .invest-info {
   width: 100%;
